<?xml version="1.0"?>
<package format="2">
  <name>e_stop_manager</name>
  <version>1.0.0</version>
  <description>The e_stop_manager package</description>

  <maintainer email="katrin.becker.17@stud-tu-darmstadt.de">Katrin</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>e_stop_manager_msgs</depend>
</package>
