<?xml version="1.0"?>
<package format="3">
  <name>e_stop_manager_msgs</name>
  <version>0.0.0</version>
  <description>The e_stop_manager_msgs package</description>

  <maintainer email="katrin.becker.17@stud-tu-darmstadt.de">Katrin Becker</maintainer>

  <license>TODO</license>

  <!-- Add any relevant URLs if needed -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>